feat: add 3rd internal protected resource endpoint

--- a/config.json.example
+++ b/config.json.example
@@ -13,5 +13,11 @@
   },
   "oauth": {
     "scope": "openid profile email"
+  },
+  "resource_server": {
+    "debug": true,
+    "port": 9091,
+    "host": "0.0.0.0",
+    "url": "<resource-server-url>"
   }
 }
