--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "cryptography>=46.0.3",
     "flask>=3.1.2",
     "pyjwt>=2.10.1",
+    "pyyaml>=6.0.2",
     "requests>=2.32.5",
 ]
 
